--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"/>
-    <title>Vite + React</title>
+    <title>FarmXpert</title>
   </head>
   <body>
     <div id="root"></div>
